# rln

./: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  outline.md
src/: app.rs  lib.rs  main.rs
src/discovery/: l2_scanner.rs  mdns_scanner.rs
src/intelligence/: fingerprint.rs  probe.rs  topology.rs
src/storage/: db.rs  drift.rs
src/system/: mod.rs  privileges.rs
src/transfer/: hash.rs  stream.rs
src/tui/: event.rs
src/tui/views/: dashboard.rs
