[package]
name = "lan-asin"
version = "0.2.0"
edition = "2021"
description = "Privacy-first, zero-trust network orchestrator for the modern LAN."

[dependencies]
# Async
tokio = { version = "^1", features = ["full"] }
async-trait = "0.1"

# Error Handling & Utilities
anyhow = "1.0"
# Networking & Discovery
pnet = "0.35"
async-arp = "0.4"
simple-mdns = { version = "0.6.3", features = ["async-tokio"] }
mac_oui = { version = "0.4.11", features = ["with-db"] }
surge-ping = "0.8"
packet-dissector-lldp = "0.3"

# Storage
rusqlite = { version = "0.39", features = ["bundled"] }
chrono = "0.4" # For timestamping snapshots

rand = "0.8"

# P2P & Transfer
iroh = "0.98.0"
sha2 = "0.10"
bytes = "1.5"

# AI Inference
# ort = "1.14" # Uncomment for performance (requires ONNX runtime)
tract-onnx = "0.22" # Defaulting to pure-rust tract for easier setup

# UI
ratatui = "0.30"
clap = { version = "4.6", features = ["derive"] }
crossterm = "0.29"
hex = "0.4.3"
dns-lookup = "3.0.1"
gethostname = "1.1.0"

[dev-dependencies]
mockall = "0.14"
